--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prelint": "eclint check * rules/* test/*",
-    "lint": "eslint .",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,7 @@
     "config",
     "neurony",
     "javascript",
-    "styleguide",
+    "styleguide"
   ],
   "author": "Andrei Radoi",
   "contributors": [
