--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-neurony",
-  "version": "1.0.6",
+  "version": "1.1.1",
   "description": "ESLint config for Neurony Solutions based on Airbnb's.",
   "main": "index.js",
   "scripts": {
@@ -17,6 +17,7 @@
     "config",
     "neurony",
     "javascript",
+    "js",
     "styleguide"
   ],
   "author": "Andrei Radoi",
@@ -48,17 +49,10 @@
     "eslint": "^5.16.0 || ^6.8.0"
   },
   "devDependencies": {
-    "@babel/runtime": "^7.8.7",
-    "babel-preset-airbnb": "^4.4.0",
-    "babel-tape-runner": "^3.0.0",
-    "eclint": "^2.8.1",
     "eslint": "^5.16.0 || ^6.8.0",
     "eslint-find-rules": "^3.4.0",
     "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "in-publish": "^2.0.0",
-    "safe-publish-latest": "^1.1.4",
-    "tape": "^5.0.0-next.4"
+    "eslint-plugin-jsx-a11y": "^6.2.3"
   },
   "peerDependencies": {
     "eslint-plugin-jsx-a11y": "^6.2.3"
